# yolo_poc

./: .gitignore  LICENSE  README.md  package.xml  setup.cfg  setup.py
launch/: yolo_poc.launch.py  yolo_with_gazebo.launch.py
resource/: yolo_poc
rviz/: rviz2-config_truck-and-trafficlight-with-yolo-annotation.rviz  yolo_poc.rviz
test/: test_files_exist.py  test_load_launch.py  test_parse_test_world.py
worlds/: camera.world  gazebo-world_truck-and-trafficlight.sdf
yolo_poc/: yolo_node.py
