<?xml version="1.0"?>
<package format="3">
  <name>yolo_poc</name>
  <version>0.0.1</version>
  <description>YOLOv8 detector for ROS 2 images</description>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <exec_depend>visualization_msgs</exec_depend>

  <test_depend>ament_pytest</test_depend>
  <test_depend>pytest</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_copyright</test_depend>
  <exec_depend>ament_index_python</exec_depend> 

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

